--- a/main/index.html
+++ b/main/index.html
@@ -447,7 +447,7 @@
                 </nav>
             </div>
         </div>
-        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
+        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div id="mcshome">
                 <img src="assets/img/Layer0.png" style="width: 100vw; height: 100vh; z-index: -1; opacity: 0.25">
                 <div class="hometitle">
