--- a/main/about.html
+++ b/main/about.html
@@ -472,7 +472,7 @@
                 </nav>
             </div>
         </div>
-        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
+        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div class="col-12">
