--- a/main/services/holter.html
+++ b/main/services/holter.html
@@ -10,8 +10,6 @@
     <meta name="copyright" content="Melbourne Cardiology Services">
     <meta name="language" content="EN">
     <meta name="robots" content="index,follow" />
-    <meta name="revised" content="Monday, July 13th, 2020, 1:30 am" />
-    <meta name="author" content="INQ Creative, inqcreativemelbourne@gmail.com">
     <meta name="copyright" content="Melbourne Cardiology Services">
     <meta name="owner" content="Melbourne Cardiology Services">
     <meta name="url" content="https://melbournecardiology.services/services/echo">
@@ -487,7 +485,7 @@
                 </nav>
             </div>
         </div>
-        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
+        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div class="col-12">
