--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -352,12 +352,12 @@
     <link rel="stylesheet" href="../assets/fonts/toriga.css">
     <link rel="stylesheet" href="../assets/fonts/vic.css">
     <style>
-        
-        html, body {
+        html,
+        body {
             max-width: 100%;
             overflow-x: hidden;
         }
-        
+
         .white {
             color: white !important;
         }
