--- a/main/book.html
+++ b/main/book.html
@@ -622,14 +622,14 @@
                 </nav>
             </div>
         </div>
-        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
+        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div class="col-12">
                     <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Apointment Request</h1>
                 </div>
             </div>
-            <div class="container-fluid feature row" style="background: var(--color-bg); margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
+            <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
                 <div class="col-sm-1"></div>
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
