--- a/main/book.html
+++ b/main/book.html
@@ -976,8 +976,7 @@
                 <div class="col-sm-1"></div>
             </div>
             <div class="row" style="background: var(--color-bg)">
-                <div class="col-1"></div>
-                <div class="col-10">
+                <div class="col-12" style="margin-right: 0 !important; padding-right: 0 !important;">
                     <footer class="main-footer" data-scroll>
                         <script>
                             var fero_server_id = '$2y$10$ZisV/mjILpfoj1Cb3toxlOw6PKpslf6sU20bgiwI9omoQSoNNTXzi';
@@ -1058,7 +1057,6 @@
                         </div> <!-- container -->
                     </footer>
                 </div>
-                <div class="col-1"></div>
             </div>
         </div>
     </div>
@@ -1079,6 +1077,7 @@
     <script src="assets/filepond-plugin-file-encode-2.1.6/dist/filepond-plugin-file-encode.js"></script>
     <script src="assets/filepond-4.19.1/dist/filepond.js"></script>
     <script>
+        
         jQuery(function() {
             jcf.replaceAll();
         });
