--- a/main/book.html
+++ b/main/book.html
@@ -725,7 +725,7 @@
                                             </div>
                                             
                                             <div class="input-wrapper">
-                                                <input data-parsley-trigger="change" data-parsley-error-message="Email required." type="email" name="ref dr email" aria-required="true" required="" id="demail" value="" class="form__input">
+                                                <input data-parsley-trigger="change" data-parsley-error-message="Email required." type="email" name="patient email" aria-required="true" required="" id="pemail" value="" class="form__input">
                                                 <label class="form__label reqstar" for="demail">Email
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
