--- a/main/book.html
+++ b/main/book.html
@@ -782,7 +782,7 @@
                                                 <label for="consultcheck" class="textc">Consultation</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Investigation Required</p>
+                                            <p class="mt-3 textc reqstar">Location</p>
                                             <div>
                                                 <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="nmelbradio" class="textc">North Melbourne</label><br>
