--- a/main/book.html
+++ b/main/book.html
@@ -771,7 +771,7 @@
                                             </div>
                                             
                                             <div class="input-wrapper autocomplete">
-                                                <input data-parsley-trigger="change" data-parsley-error-message="Preferred time required." type="text" name="preferred time" title="Preferred Day" id="prefday" value="" aria-required="true" class="form__input" required>
+                                                <input data-parsley-trigger="change" data-parsley-error-message="Preferred time required." type="text" name="preferred time" title="Preferred Time" id="prefday" value="" aria-required="true" class="form__input" required>
                                                 <label class="form__label reqstar" for="prefday">Preferred Time
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
