--- a/main/book.html
+++ b/main/book.html
@@ -816,7 +816,7 @@
                                             </div>
 
                                             <div class="input-wrapper">
-                                                <textarea name="clinical details" title="Clinical Details" id="pclindetails" value="" class="form__input txta" style="overflow: hidden"></textarea>
+                                                <textarea name="clinical details" title="Notes" id="pclindetails" value="" class="form__input txta" style="overflow: hidden"></textarea>
                                                 <label class="form__label reqstar" for="pclindetails">Notes
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
