--- a/main/book.html
+++ b/main/book.html
@@ -845,9 +845,9 @@
                                         <input type="file" class="filepond" name="attachment" multiple data-allow-reorder="true" data-max-file-size="3MB" data-max-files="3">
                                         <!--<input type="file" name="file">-->
 
-                                        <input type="text" name="_honey" style="display:none">
+                                        <!--<input type="text" name="_honey" style="display:none">
                                         <input type="hidden" name="_webhook" value="">
-                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
+                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>-->
                                     </form>
                                 </div>
                             </div>
