--- a/main/book.html
+++ b/main/book.html
@@ -846,8 +846,8 @@
                                         <!--<input type="file" name="file">-->
 
                                         <!--<input type="text" name="_honey" style="display:none">
-                                        <input type="hidden" name="_webhook" value="">
-                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>-->
+                                        <input type="hidden" name="_webhook" value="">-->
+                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
                                     </form>
                                 </div>
                             </div>
