--- a/main/book.html
+++ b/main/book.html
@@ -806,6 +806,7 @@
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Preferred Location</p>
+                                            <p class="text11">NB. Not all services available at all locations.</p>
                                             <div>
                                                 <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="nmelbradio" class="textc">North Melbourne</label><br>
