--- a/main/book2.html
+++ b/main/book2.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     
-    <form action="https://beta.melbournecardiology.services/api/submit.php" method="post" enctype="multipart/form-data">
+    <form action="https://melbournecardiology.services/api/submit.php" method="post" enctype="multipart/form-data">
 
         <input type="file" name="filepond[]" multiple>
 
