--- a/main/book2.html
+++ b/main/book2.html
@@ -65,7 +65,7 @@
         maxFileSize: '5MB',
 
         // crop the image to a 1:1 ratio
-        imageCropAspectRatio: '1:1',
+        //imageCropAspectRatio: '1:1',
 
         // resize the image
         imageResizeTargetWidth: 200,
