--- a/main/book2.html
+++ b/main/book2.html
@@ -1,8 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Melbourne Cardiology Services, echo, echocardiography, holter monitoring, cardiac services in North Melbourne" />
+    <meta name="description" content="At Melbourne Cardiology Services, we value our patients and strive to serve them well. We offer services in echocardiography, Holter monitoring, stress echocardiography, cardiac CT, as well as consultations across multiple locations. We aim to provide our patients and referring doctors with quick turnarounds and service that embodies our credo of excellence, integrity and quality." />
+    <meta name="copyright" content="Melbourne Cardiology Services">
+    <meta name="language" content="EN">
+    <meta name="robots" content="index,follow" />
+    <meta name="copyright" content="Melbourne Cardiology Services">
+    <meta name="owner" content="Melbourne Cardiology Services">
+    <meta name="url" content="https://melbournecardiology.services">
+    <meta name="identifier-URL" content="https://melbournecardiology.services">
+    <meta name="directory" content="submission">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="revisit-after" content="7 days">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/assets/img/favicon-144.png">
+    <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.png">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/assets/img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/assets/img/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/assets/img/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/assets/img/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16.png">
+    <link rel="apple-touch-icon" href="/assets/img/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon-180.png">
+    <link rel="canonical" href="https://melbournecardiology.services/book">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">-->
+    <!--<link rel="stylesheet" href="bootstrap-4.1.2/dist/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="assets/css/bootstrap.css">-->
+    <link rel="stylesheet" href="assets/bootstrap-4.5.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
     <title></title>
 
