--- a/main/book2.html
+++ b/main/book2.html
@@ -53,6 +53,20 @@
     <!-- Get FilePond and FilePond image preview plugin styles from a CDN -->
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/mcs.css">
+    <link rel="stylesheet" href="assets/css/mcs1.css">
+    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/cursor.css">
+    <!--<link rel="stylesheet" href="assets/Evie/css/style.css">-->
+    <link rel="stylesheet" href="assets/css/micromodal.css">
+    <link rel="stylesheet" href="assets/datepicker-1.0.9/dist/datepicker.css">
+    <!--<link rel="stylesheet" href="assets/bootstrap-datepicker-master/dist/css/bootstrap-datepicker.css">-->
+    <link rel="stylesheet" href="assets/filepond-4.19.1/dist/filepond.css">
+    <link rel="stylesheet" href="assets/fonts/medel.css">
+    <link rel="stylesheet" href="assets/fonts/montserrat.css">
+    <link rel="stylesheet" href="assets/fonts/toriga.css">
+    <link rel="stylesheet" href="assets/fonts/vic.css">
 
     <style>
         /* FilePond will automatically fill up all available horizontal space, it's best to limit it in some way */
