--- a/main/book2.html
+++ b/main/book2.html
@@ -347,6 +347,7 @@
         var pond = FilePond.create(document.querySelector('input[type="file"]'));
 
     </script>
+    <div class="cursor"></div>
 
 </body>
 
