--- a/main/book2.html
+++ b/main/book2.html
@@ -176,23 +176,14 @@
                                     </div>
                                 </div>
                                 <div class="modal__content px-sm-5">
-                                    <form method="post" action="https://api.formcake.com/api/form/2079b695-d296-499e-9cec-1d3e3c24d088/submission" role="form" enctype="application/x-www-form-urlencoded" class="form" id="form">
+                                    <form method="post" action="https://melbournecardiology.services/api/submit.php" role="form" enctype="multipart/form-data" class="form" id="form">
 
                                         <fieldset>
                                             <legend class="textp textc">Your Details</legend>
 
                                         </fieldset>
 
-
-                                        <form action="https://melbournecardiology.services/api/submit.php" method="post" enctype="multipart/form-data">
-
-                                            <input type="file" name="filepond[]" multiple>
-
-                                            <button type="submit">Submit</button>
-
-                                        </form>
-
-                                        <input type="file" class="filepond" name="attachment" multiple data-allow-reorder="true" data-max-file-size="30MB" data-max-files="5">
+                                        <input type="file" class="filepond" name="filepond[]" multiple data-allow-reorder="true" data-max-file-size="30MB" data-max-files="5">
                                         <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
                                     </form>
                                 </div>
