--- a/main/book2.html
+++ b/main/book2.html
@@ -174,7 +174,7 @@
 
                                         </fieldset>
 
-                                        <input type="file" class="filepond" name="filepond[]" multiple data-allow-reorder="true" data-max-file-size="30MB" data-max-files="5">
+                                        <input type="file" class="filepond" name="attachments" multiple data-allow-reorder="true" data-max-file-size="30MB" data-max-files="5">
                                         <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
                                     </form>
                                 </div>
@@ -322,7 +322,9 @@
             imageResizeTargetWidth: 200,
 
             // upload to this server end point
-            server: 'api/'
+            server: 'api/',
+            
+            credits: 'false'
         });
 
         // Turn a file input into a file pond
