--- a/main/book2.html
+++ b/main/book2.html
@@ -319,7 +319,7 @@
             //imageCropAspectRatio: '1:1',
 
             // resize the image
-            imageResizeTargetWidth: 200,
+            //imageResizeTargetWidth: 200,
 
             // upload to this server end point
             server: 'api/',
