--- a/main/book2.html
+++ b/main/book2.html
@@ -342,6 +342,17 @@
     </script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+        Splitting();
+
+    </script>
+    <script>
+        ScrollOut({
+            threshold: 0.1,
+            once: false
+        });
+
+    </script>
     <div class="cursor"></div>
 
 </body>
