--- a/main/book2.html
+++ b/main/book2.html
@@ -50,6 +50,33 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
     <title></title>
+    
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <!--<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>-->
+    <script src="https://unpkg.com/splitting@1.0.0/dist/splitting.js"></script>
+    <script src="https://unpkg.com/scroll-out@2.2.3/dist/scroll-out.min.js"></script>
+    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+    <script>
+        var ml = {
+            timelines: {}
+        };
+
+        /*ScrollReveal({
+            scale: 0.85,
+            duration: 1000,
+        });*/
+
+        document.documentElement.classList.remove('no-js');
+        document.documentElement.classList.add('js');
+
+    </script>
+    <script type="text/javascript" src="assets/js/highlight.pack.js"></script>
+    <script type="text/javascript" src="assets/js/modernizr.custom.min.js"></script>
+    <!--<script type="text/javascript" src="assets/js/TweenMax.min.js"></script>-->
+    <script type="text/javascript" src="assets/js/ScrollMagic.js"></script>
+    <script type="text/javascript" src="assets/js/animation.gsap.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/mcs.css">
