--- a/main/book2.html
+++ b/main/book2.html
@@ -233,7 +233,7 @@
                                 <nav class="main-footer__nav">
                                     <div class="main-footer__nav-list" style="text-align: center">
                                         <div class="main-footer__nav-item">
-                                            <h5 class="main-footer__nav-header" data-splitting>Quick Links</h5>
+                                            <h5 class="main-footer__nav-header">Quick Links</h5>
                                             <div class="main-footer__nav-link"><a href="about">About Us</a></div>
                                             <div class="main-footer__nav-link"><a href="referral">Referral Form</a></div>
                                             <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
