--- a/main/book2.html
+++ b/main/book2.html
@@ -245,7 +245,7 @@
                                             <div class="main-footer__nav-link"><a href="services/holter">Holter Monitoring</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
-                                            <h5 class="main-footer__nav-header" data-splitting>Locations</h5>
+                                            <h5 class="main-footer__nav-header">Locations</h5>
                                             <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
