--- a/main/book2.html
+++ b/main/book2.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="assets/bootstrap-4.5.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
-    <title></title>
+    <title>Appointment Request | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
     
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
