--- a/main/book2.html
+++ b/main/book2.html
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> <!-- container -->
+                        </div>
                     </footer>
                 </div>
             </div>
