--- a/main/book2.html
+++ b/main/book2.html
@@ -258,7 +258,7 @@
                                         </div>
                                     </div>
                                 </nav>
-                            </div> <!-- main-footer__content -->
+                            </div>
                             <div class="container-fluid">
                                 <div class="main-footer__colophon row">
                                     <div class="main-footer__colophon-nav text col-12 text-center justify-content-center" style="font-size: 12px">
