--- a/main/book2.html
+++ b/main/book2.html
@@ -203,7 +203,7 @@
                                 <div class="modal__content px-sm-5">
                                     <form method="post" action="https://melbournecardiology.services/api/submit.php" role="form" enctype="multipart/form-data" class="form" id="form">
                                         <fieldset>
-                                            <legend class="textp textc">Your Details</legend>
+                                            <legend class="textp textc">Upload Your Referral Form</legend>
                                         </fieldset>
                                         <input type="file" class="filepond" name="attachments" multiple data-allow-reorder="true" data-max-file-size="30MB" data-max-files="5">
                                         <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
