--- a/main/book.html
+++ b/main/book.html
@@ -633,7 +633,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        Please submit the form if you are a prospective patient, have received a referral from your doctor, and would like to request an appointment.
+                        Please submit this form if you are a prospective patient, have received a referral from your doctor, and would like to request an appointment.
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
