--- a/main/book.html
+++ b/main/book.html
@@ -840,7 +840,7 @@
                                             </div>
 
                                         </fieldset>
-                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
+                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Next</button>
                                     </form>
                                 </div>
                             </div>
