--- a/main/book.html
+++ b/main/book.html
@@ -840,6 +840,7 @@
                                             </div>
 
                                         </fieldset>
+                                        <input type="text" name="_honey" style="display:none">
                                         <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Next</button>
                                     </form>
                                 </div>
