--- a/main/feedback.html
+++ b/main/feedback.html
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="../assets/img/favicon-144.png">
+    <meta name="msapplication-TileImage" content="assets/img/favicon-144.png">
     <meta name="msapplication-config" content="../assets/img/browserconfig.xml">
     <link rel="shortcut icon" type="image/x-icon" href="../assets/img/icon.png">
     <link rel="icon" sizes="16x16 32x32 64x64" href="../assets/img/favicon.ico">
