--- a/main/feedback.html
+++ b/main/feedback.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="assets/img/favicon-144.png">
-    <meta name="msapplication-config" content="../assets/img/browserconfig.xml">
+    <meta name="msapplication-config" content="assets/img/browserconfig.xml">
     <link rel="shortcut icon" type="image/x-icon" href="../assets/img/icon.png">
     <link rel="icon" sizes="16x16 32x32 64x64" href="../assets/img/favicon.ico">
     <link rel="icon" type="image/png" sizes="196x196" href="../assets/img/favicon-192.png">
