--- a/main/feedback.html
+++ b/main/feedback.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-config" content="assets/img/browserconfig.xml">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.png">
     <link rel="icon" sizes="16x16 32x32 64x64" href="assets/img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="../assets/img/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="assets/img/favicon-192.png">
     <link rel="icon" type="image/png" sizes="160x160" href="../assets/img/favicon-160.png">
     <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon-96.png">
     <link rel="icon" type="image/png" sizes="64x64" href="../assets/img/favicon-64.png">
