--- a/main/feedback.html
+++ b/main/feedback.html
@@ -29,7 +29,7 @@
     <link rel="icon" sizes="16x16 32x32 64x64" href="assets/img/favicon.ico">
     <link rel="icon" type="image/png" sizes="196x196" href="assets/img/favicon-192.png">
     <link rel="icon" type="image/png" sizes="160x160" href="assets/img/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96.png">
     <link rel="icon" type="image/png" sizes="64x64" href="../assets/img/favicon-64.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16.png">
