--- a/main/feedback.html
+++ b/main/feedback.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="64x64" href="assets/img/favicon-64.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16.png">
-    <link rel="apple-touch-icon" href="../assets/img/favicon-57.png">
+    <link rel="apple-touch-icon" href="assets/img/favicon-57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="../assets/img/favicon-114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../assets/img/favicon-72.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../assets/img/favicon-144.png">
