--- a/main/feedback.html
+++ b/main/feedback.html
@@ -37,7 +37,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon-114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon-72.png">
     <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../assets/img/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon-60.png">
     <link rel="apple-touch-icon" sizes="120x120" href="../assets/img/favicon-120.png">
     <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/favicon-76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="../assets/img/favicon-152.png">
