--- a/main/feedback.html
+++ b/main/feedback.html
@@ -46,7 +46,7 @@
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">-->
     <!--<link rel="stylesheet" href="bootstrap-4.1.2/dist/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="assets/css/bootstrap.css">-->
-    <link rel="stylesheet" href="../assets/bootstrap-4.5.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.5.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <!--integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"-->
     <!--<link rel="stylesheet" href="fonts/fontawesome-free-5.1.1-web/css/all.css">-->
