--- a/main/feedback.html
+++ b/main/feedback.html
@@ -53,7 +53,7 @@
     <!--<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
     <!--<link rel="stylesheet" href="assets/css/scrollreveal.css">-->
     <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/normalize.css" type="text/css">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
     <link href="../assets/css/staticmap.css" rel="stylesheet">
