--- a/main/feedback.html
+++ b/main/feedback.html
@@ -56,7 +56,7 @@
     <link rel="stylesheet" href="assets/css/normalize.css" type="text/css">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
-    <link href="../assets/css/staticmap.css" rel="stylesheet">
+    <link href="assets/css/staticmap.css" rel="stylesheet">
     <!-- Google Tag Manager -->
     <script>
         (function(w, d, s, l, i) {
