--- a/main/feedback.html
+++ b/main/feedback.html
@@ -110,7 +110,7 @@
         document.documentElement.classList.add('js');
 
     </script>
-    <script type="text/javascript" src="../assets/js/highlight.pack.js"></script>
+    <script type="text/javascript" src="assets/js/highlight.pack.js"></script>
     <script type="text/javascript" src="../assets/js/modernizr.custom.min.js"></script>
     <!--<script type="text/javascript" src="assets/js/TweenMax.min.js"></script>-->
     <script type="text/javascript" src="../assets/js/ScrollMagic.js"></script>
