--- a/main/feedback.html
+++ b/main/feedback.html
@@ -113,7 +113,7 @@
     <script type="text/javascript" src="assets/js/highlight.pack.js"></script>
     <script type="text/javascript" src="assets/js/modernizr.custom.min.js"></script>
     <!--<script type="text/javascript" src="assets/js/TweenMax.min.js"></script>-->
-    <script type="text/javascript" src="../assets/js/ScrollMagic.js"></script>
+    <script type="text/javascript" src="assets/js/ScrollMagic.js"></script>
     <script type="text/javascript" src="../assets/js/animation.gsap.js"></script>
     <script>
         document.getElementsByTagName("html")[0].className += " js";
