--- a/main/feedback.html
+++ b/main/feedback.html
@@ -343,7 +343,7 @@
     <script async src='https://thelyra.pro/a/analytics.js'></script>-->
     <!-- End Lyra-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/mcs.css">
+    <link rel="stylesheet" href="assets/css/mcs.css">
     <link rel="stylesheet" href="../assets/css/mcs1.css">
     <link rel="stylesheet" href="../assets/css/cursor.css">
     <link rel="stylesheet" href="../assets/css/micromodal.css">-
