--- a/main/feedback.html
+++ b/main/feedback.html
@@ -344,7 +344,7 @@
     <!-- End Lyra-->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/mcs.css">
-    <link rel="stylesheet" href="../assets/css/mcs1.css">
+    <link rel="stylesheet" href="assets/css/mcs1.css">
     <link rel="stylesheet" href="../assets/css/cursor.css">
     <link rel="stylesheet" href="../assets/css/micromodal.css">-
     <link rel="stylesheet" href="../assets/fonts/medel.css">
