--- a/main/feedback.html
+++ b/main/feedback.html
@@ -349,7 +349,7 @@
     <link rel="stylesheet" href="assets/css/micromodal.css">-
     <link rel="stylesheet" href="assets/fonts/medel.css">
     <link rel="stylesheet" href="assets/fonts/montserrat.css">
-    <link rel="stylesheet" href="../assets/fonts/toriga.css">
+    <link rel="stylesheet" href="assets/fonts/toriga.css">
     <link rel="stylesheet" href="../assets/fonts/vic.css">
     <style>
         html,
