--- a/main/feedback.html
+++ b/main/feedback.html
@@ -350,7 +350,7 @@
     <link rel="stylesheet" href="assets/fonts/medel.css">
     <link rel="stylesheet" href="assets/fonts/montserrat.css">
     <link rel="stylesheet" href="assets/fonts/toriga.css">
-    <link rel="stylesheet" href="../assets/fonts/vic.css">
+    <link rel="stylesheet" href="assets/fonts/vic.css">
     <style>
         html,
         body {
