--- a/main/feedback.html
+++ b/main/feedback.html
@@ -367,7 +367,7 @@
         }
 
         .herotitle:after {
-            background-image: url("../assets/img/swoosh-white2.svg");
+            background-image: url("assets/img/swoosh-white2.svg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
             content: '';
