--- a/main/feedback.html
+++ b/main/feedback.html
@@ -394,7 +394,7 @@
         }
 
     </style>
-    <title>Our Services | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
+    <title>Feedback | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
 </head>
 
 <body onload="mcsloader()" style="cursor: none">
