--- a/main/feedback.html
+++ b/main/feedback.html
@@ -426,7 +426,7 @@
             <nav class="menu ha-header ha-header-shrink" style="background: #8737FF !important;">
                 <ol class="dtmenu text">
                     <li class="menu-item"><a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
-                    <li class="menu-item dtmenuitem"><a href="../about" class="white">About</a></li>
+                    <li class="menu-item dtmenuitem"><a href="about" class="white">About</a></li>
                     <li class="menu-item dtmenuitem">
                         <a href="../services/" class="white">Services</a>
                         <ol class="sub-menu">
