--- a/main/feedback.html
+++ b/main/feedback.html
@@ -428,7 +428,7 @@
                     <li class="menu-item"><a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="about" class="white">About</a></li>
                     <li class="menu-item dtmenuitem">
-                        <a href="../services/" class="white">Services</a>
+                        <a href="services/" class="white">Services</a>
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="echo">Echocardiography</a></li>
                             <li class="menu-item purple"><a href="stressecho">Stress Echocardiography</a></li>
