--- a/main/feedback.html
+++ b/main/feedback.html
@@ -430,7 +430,7 @@
                     <li class="menu-item dtmenuitem">
                         <a href="services/" class="white">Services</a>
                         <ol class="sub-menu">
-                            <li class="menu-item purple"><a href="echo">Echocardiography</a></li>
+                            <li class="menu-item purple"><a href="services/echo">Echocardiography</a></li>
                             <li class="menu-item purple"><a href="stressecho">Stress Echocardiography</a></li>
                             <li class="menu-item purple"><a href="holter">Holter Monitoring</a></li>
                         </ol>
