--- a/main/feedback.html
+++ b/main/feedback.html
@@ -431,7 +431,7 @@
                         <a href="services/" class="white">Services</a>
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="services/echo">Echocardiography</a></li>
-                            <li class="menu-item purple"><a href="stressecho">Stress Echocardiography</a></li>
+                            <li class="menu-item purple"><a href="services/stressecho">Stress Echocardiography</a></li>
                             <li class="menu-item purple"><a href="holter">Holter Monitoring</a></li>
                         </ol>
                     </li>
