--- a/main/feedback.html
+++ b/main/feedback.html
@@ -432,7 +432,7 @@
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="services/echo">Echocardiography</a></li>
                             <li class="menu-item purple"><a href="services/stressecho">Stress Echocardiography</a></li>
-                            <li class="menu-item purple"><a href="holter">Holter Monitoring</a></li>
+                            <li class="menu-item purple"><a href="services/holter">Holter Monitoring</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
