--- a/main/feedback.html
+++ b/main/feedback.html
@@ -436,7 +436,7 @@
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
-                        <a href="../locations/" class="dtmenuheader white">Locations</a>
+                        <a href="locations/" class="dtmenuheader white">Locations</a>
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="../locations/nmelb">North Melbourne</a></li>
                             <li class="menu-item purple"><a href="../locations/epworth">Epworth Richmond</a></li>
