--- a/main/feedback.html
+++ b/main/feedback.html
@@ -440,7 +440,7 @@
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="locations/nmelb">North Melbourne</a></li>
                             <li class="menu-item purple"><a href="locations/epworth">Epworth Richmond</a></li>
-                            <li class="menu-item purple"><a href="../locations/mponds">Moonee Ponds</a></li>
+                            <li class="menu-item purple"><a href="locations/mponds">Moonee Ponds</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
