--- a/main/feedback.html
+++ b/main/feedback.html
@@ -447,7 +447,7 @@
                         <a href="patients" class="dtmenuheader white">Patients</a>
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="book">Request Appointment</a></li>
-                            <li class="menu-item purple"><a href="../contact">General Enquiries</a></li>
+                            <li class="menu-item purple"><a href="contact">General Enquiries</a></li>
                             <li class="menu-item purple"><a href="../feedback">Feedback</a></li>
                         </ol>
                     </li>
