--- a/main/feedback.html
+++ b/main/feedback.html
@@ -451,7 +451,7 @@
                             <li class="menu-item purple"><a href="feedback">Feedback</a></li>
                         </ol>
                     </li>
-                    <li class="menu-item dtmenuitem"><a href="../refer" class="boldbtn">Refer a Patient</a></li>
+                    <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer a Patient</a></li>
                     <!--<li class="menu-item dtmenuitem">
                         <a href="search">
                             <svg class="icon" viewBox="0 0 20 20" aria-label="Toggle search">
