--- a/main/feedback.html
+++ b/main/feedback.html
@@ -475,7 +475,7 @@
             <div class="overlay purple" id="overlay">
                 <nav class="overlay-menu">
                     <ul>
-                        <li><a href="../">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="../about">About</a></li>
                         <li><a href="../services/">Services</a></li>
                         <li><a href="../locations/">Locations</a></li>
