--- a/main/feedback.html
+++ b/main/feedback.html
@@ -477,7 +477,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="about">About</a></li>
-                        <li><a href="../services/">Services</a></li>
+                        <li><a href="services/">Services</a></li>
                         <li><a href="../locations/">Locations</a></li>
                         <li><a href="../patients">Patients</a></li>
                         <li><a href="../refer">Practitioners</a></li>
