--- a/main/feedback.html
+++ b/main/feedback.html
@@ -480,7 +480,7 @@
                         <li><a href="services/">Services</a></li>
                         <li><a href="locations/">Locations</a></li>
                         <li><a href="patients">Patients</a></li>
-                        <li><a href="../refer">Practitioners</a></li>
+                        <li><a href="refer">Practitioners</a></li>
                     </ul>
                 </nav>
             </div>
