--- a/main/feedback.html
+++ b/main/feedback.html
@@ -535,7 +535,7 @@
                                             <h5 class="main-footer__nav-header">Services</h5>
                                             <div class="main-footer__nav-link"><a href="services/echo">Echocardiogram</a></div>
                                             <div class="main-footer__nav-link"><a href="services/stressecho">Stress Echocardiogram</a></div>
-                                            <div class="main-footer__nav-link"><a href="holter">Holter Monitoring</a></div>
+                                            <div class="main-footer__nav-link"><a href="services/holter">Holter Monitoring</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
