--- a/main/feedback.html
+++ b/main/feedback.html
@@ -563,7 +563,7 @@
 
                                                 </script> Melbourne Cardiology Services. All rights reserved. Website by INQ Creative.
                                             </span>
-                                            <a href="../terms">Terms</a>.
+                                            <a href="terms">Terms</a>.
                                             <a href="../privacy">Privacy</a>.
                                         </p>
                                     </div>
