--- a/main/feedback.html
+++ b/main/feedback.html
@@ -564,7 +564,7 @@
                                                 </script> Melbourne Cardiology Services. All rights reserved. Website by INQ Creative.
                                             </span>
                                             <a href="terms">Terms</a>.
-                                            <a href="../privacy">Privacy</a>.
+                                            <a href="privacy">Privacy</a>.
                                         </p>
                                     </div>
                                     <div class="main-footer__colophon-nav text col-12 text-center justify-content-center" style="font-size: 12px">
