--- a/main/feedback.html
+++ b/main/feedback.html
@@ -606,7 +606,7 @@
     <script type="text/javascript" src="assets/js/menu.js"></script>
     <script type="text/javascript" src="assets/js/cursor.js"></script>
     <script type="text/javascript" src="assets/js/progressbar.js"></script>
-    <script type="text/javascript" src="../assets/js/daygreeting.js"></script>
+    <script type="text/javascript" src="assets/js/daygreeting.js"></script>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9ub2RqbGVlIiwiYSI6ImNqejBrdWV6YjAwMjgzbnAwc3NvdDhoZHAifQ.naL_6lnZjH31Wwc31n4SgA';
 
