--- a/main/feedback.html
+++ b/main/feedback.html
@@ -709,7 +709,7 @@
         });
 
     </script>
-    <script src="../assets/js/util.js"></script>
+    <script src="assets/js/util.js"></script>
     <script src="../assets/js/main.js"></script>
     <!--<script src="assets/js/waypoints.min.js"></script>-->
     <script type="text/javascript">
