--- a/main/feedback.html
+++ b/main/feedback.html
@@ -501,7 +501,7 @@
                             <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                         <div id="button1">
-                            <a class="mybtn link text3" href="stressecho"><span>Stress Echocardiography</span></a>
+                            <a class="mybtn link text3" href="pfeedback"><span>Patients</span></a>
                             <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                     </div>
