--- a/main/services/index.html
+++ b/main/services/index.html
@@ -423,7 +423,7 @@
             </div>
         </div>
         <div id="ha-header">
-            <nav class="menu ha-header ha-header-shrink" style="background: #8737FF !important;">
+            <nav class="menu ha-header ha-header-shrink purple-bg">
                 <ol class="dtmenu text">
                     <li class="menu-item"><a href="../"><img src="../assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="../about" class="white">About</a></li>
@@ -463,7 +463,7 @@
                     </li>-->
                 </ol>
             </nav>
-            <nav class="mobmenu" style="background: #8737FF !important">
+            <nav class="mobmenu purple-bg">
                 <a href="../"><img src="../assets/img/logomark-final%20white.png" style="max-height: 30px; width: auto; margin: 16px 0 0 20px"></a>
                 <div class="button_container purple" id="toggle" data-target="#overlay" aria-controls="navMobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="top"></span>
