--- a/main/services/echo.html
+++ b/main/services/echo.html
@@ -423,7 +423,7 @@
             </div>
         </div>
         <div id="ha-header">
-            <nav class="menu ha-header ha-header-shrink" style="background: #8737FF !important;">
+            <nav class="menu ha-header ha-header-shrink">
                 <ol class="dtmenu text">
                     <li class="menu-item"><a href="../"><img src="../assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="../about" class="white">About</a></li>
