--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -547,9 +547,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        MCS welcomes new patients. If you are a doctor and wish to refer a patient to us, please fill out the form below. Alternatively, we have PDF forms which you can download and email back to us.<br><br>
-                        <a href="assets/public/MCS%20Request%20Form%20(Interactive).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Interactive)</a><br><br>
-                        <a href="assets/public/MCS%20Request%20Form%20(Print).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Print)</a>
+                        If you are a patient wishing to provide us with feedback of your experience with us, please use the Patient Feedback form <a href="pfeedback" class="textlink">here</a>
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
