--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -1410,6 +1410,10 @@
         var prefDay = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
 
         autocomplete(document.getElementById("prefday"), prefDay);
+        
+        var typeFeedback = ["Compliment", "Complaint", "Comment"];
+
+        autocomplete(document.getElementById("typefb"), typeFeedback);
 
     </script>
     <!--<script>
