--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -806,7 +806,7 @@
                                                 </svg>
                                             </div>
 
-                                            <p class="mt-3 textc reqstar">Content of Feedback</p>
+                                            <p class="mt-3 textc reqstar">Investigation(s) Required</p>
                                             <div>
                                                 <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="echocheck" class="textc">Echocardiography</label><br>
