--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -826,6 +826,10 @@
                                                 <label for="mpondsradio" class="textc">Moonee Ponds</label><br>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Richmond</label>
+                                                <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="richmondradio" class="textc">Richmond</label>
+                                                <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="richmondradio" class="textc">Richmond</label>
                                             </div>
 
                                             <div class="input-wrapper">
