--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -825,7 +825,7 @@
                                                 <input type="radio" name="location" value="Moonee Ponds " class="" id="mpondsradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="mpondsradio" class="textc">Report/Letter Delivery</label><br>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="richmondradio" class="textc">Richmond</label>
+                                                <label for="richmondradio" class="textc">Report/Letter Turnaround</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="richmondradio" class="textc">Richmond</label>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
