--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -832,7 +832,7 @@
                                                 <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Content of Feedback</p>
+                                            <p class="mt-3 textc reqstar">Rating of Service</p>
                                             <div>
                                                 <input type="radio" name="fbcontent" value="Patient Appointment " class="" id="papptradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="papptradio" class="textc">Patient Appointment</label><br>
